fix wrapping h1s

--- a/d3_NFLv2_mobile/football.css
+++ b/d3_NFLv2_mobile/football.css
@@ -10,6 +10,7 @@
 }
 
 .title {
+  width: 610px;
   position: absolute;
   left: 20px;
   top: 15px;
